flasghed message updated to remove charcters

--- a/app/templates/auth/set-password.html
+++ b/app/templates/auth/set-password.html
@@ -14,18 +14,18 @@
     <main>
         <div class="auth-form-container">
             <div class="flashed">
-                {{message[0]}}
+                {{message[0] | replace('[', '') | replace(']', '') | replace("'", '')   }}
             </div>
-            <form class="auth-form" method="POST" action="/auth/password/request">
+            <form class="auth-form" method="POST" action="/auth/password/update/{{pid}}">
                 <div class="form-group">
-                <label for="auth-admin-reset-email">Email</label>
+                <label for="auth-admin-reset-email">Password</label>
                 {{form.password(class="form-control", placeholder="Enter new password", id="auth-admin-set-password")}}
                 </div>
                 <div class="form-group">
-                    <label for="auth-admin-reset-email">Email</label>
+                    <label for="auth-admin-reset-email">Confirm Password</label>
                     {{form.confirm_password(class="form-control", placeholder="Confirm new password", id="auth-confirm-set-password")}}
                 </div>
-                <button type="submit" class="btn btn-primary btn-auth-form">Reset Password Via Email</button>
+                <button type="submit" class="btn btn-primary btn-auth-form">Confirm Password Change</button>
                   {{form.csrf_token}}
             </form>
         </div>
