--- a/app/templates/include/scripts.html
+++ b/app/templates/include/scripts.html
@@ -1,3 +1,4 @@
 <script src="{{url_for('static', filename='scripts/main.js')}}" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script> <!-- Text Editor -->
