--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -13,6 +13,15 @@ ul {
     padding: 0;
 }
 
+h1, h2, h3, h4, h5, h6, p, a, span {
+    font-family: "Josefin Sans";
+    font-weight: 200;
+}
+
+main {
+    width: 100%;
+}
+
 /* Flashed Messages */
 
 .flashed {
@@ -190,4 +199,94 @@ li#submit-btn-li {
     width: 100%;
     position: relative;
     left: 6px;
+}
+
+/* Posts page */
+
+.blog-posts-backend {
+    background: #e6e6e6;
+}
+
+.admin-all-posts-panel {
+    padding: 40px;
+    background: #e6e6e6;
+}
+
+.admin-all-posts-table-container {
+    background: white;
+    padding: 20px;
+    border-radius: 4px;
+}
+
+.admin-all-posts-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+span#article-page-breadcrumb {
+    position: relative;
+    top: 13px;
+}
+
+.add-article-btn {
+    padding-bottom: 20px;
+    position: relative;
+    left: 2px;
+}
+
+.posts-search-filter {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e6e6e6;
+}
+
+.records-per-page {
+    display: flex;
+}
+
+input#points {
+    width: 42px;
+    border: 1px solid grey;
+    padding: 3px;
+    border-radius: 4px;
+}
+
+p#records-per-page {
+    position: relative;
+    left: 6px;
+    top: 8px;
+}
+
+input#searchinputbox {
+    width: 132px;
+    border: 1px solid grey;
+    border-radius: 4px;
+}
+
+.show-all-posts {
+    margin-top: 20px;
+}
+
+table#posts-table th {
+    font-size: 13px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e6e6e6;
+    
+}
+
+tr.posts-details td {
+    font-size: 14px;
+    padding: 10px;
+    position: relative;
+    right: 10px;
+}
+
+.posts-details:nth-child(even){
+    background:  #e6e6e6;
+}
+
+.posts-details td{
+    border-right: 1px solid white;
 }
