--- a/app/templates/admin/create-post.html
+++ b/app/templates/admin/create-post.html
@@ -10,11 +10,14 @@
     {% include 'include/admin/side-navigation.html' %}
     <main class="admin-dash-main">
        <div class="admin-all-posts-wrapper">
+            <div class="flashed">
+                {{message[0] | replace('[', '') | replace(']', '') | replace("'", '')   }}
+            </div>
             <div class="create-blog-post-header">
                 <h2 id="new-blog-post-heading">New Blog Post</h2>
-                <a href="#" id="cancel-blog-post">Return to all blog posts</a>
+                <a href="{{url_for('admin_bp.posts')}}" id="cancel-blog-post">Return to all blog posts</a>
             </div>
-            <form method="POST" action="/" class="form-create-post">
+            <form method="POST" action="/dashboard/add/post" class="form-create-post">
                 <ul>
                     <li>
                         {{form.title(placeholder="Enter a title", id="new-blog-title")}}
@@ -26,15 +29,16 @@
                         <label for="post-status" id="new-post-status">Post Status:</label>
                         {{form.status}}
                     </li>
+                    {{form.content}}
                     <li>
                         <label for="post-car" id="new-post-cat">Post Category:</label>
                         {{form.category}}
                     </li>
                     <li id="submit-btn-li">
-                        <button type="submit" class="btn btn-primary btn-submit-post">Create Post</button>
+                        <button onclick="saveTextEditorValue('post-content')" type="submit" class="btn btn-primary btn-submit-post">Create Post</button>
                     </li>
                 </ul>
-        
+                {{form.csrf_token}}
             </form>
        </div>
     </main>
