--- a/app/templates/include/styles.html
+++ b/app/templates/include/styles.html
@@ -1,2 +1,4 @@
 <link href="{{url_for('static', filename='styles/main.css')}}" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;1,200&display=swap" rel="stylesheet">
