--- a/app/templates/include/admin/side-navigation.html
+++ b/app/templates/include/admin/side-navigation.html
@@ -6,27 +6,54 @@
         <div class="side-nav-links">
             <ul>
                 <a href="{{url_for('admin_bp.dashboard')}}">
+                    
                     <li>
-                        Dashboard
+                        <svg id="svg-home" height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;}</style></defs><title>interface-home-3</title><polyline class="a" points="0.5 7 7 0.5 13.5 7"/><polyline class="a" points="2.5 8.5 2.5 13.5 11.5 13.5 11.5 8.5"/></svg>    Dashboard
                     </li>
                 </a>
-                <a href="{{url_for('admin_bp.posts')}}">
+                <a id="showPostsLink" onclick="menuShowSubPosts()">
                     <li>
+                        <svg id="article-svg" height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;}</style></defs><title>interface-text-formatting-paragraph-article</title><line class="a" x1="13.5" y1="1" x2="5" y2="1"/><line class="a" x1="13.5" y1="4" x2="0.5" y2="4"/><line class="a" x1="13.5" y1="7" x2="0.5" y2="7"/><line class="a" x1="9.5" y1="13" x2="0.5" y2="13"/><line class="a" x1="13.5" y1="10" x2="0.5" y2="10"/></svg>
                         Posts
                     </li>
                 </a>
-                <a href="{{url_for('admin_bp.category_page')}}">
+                <div class="hidden-post-links">
+                    <a href="{{url_for('admin_bp.posts')}}">
+                        <li>All Posts</li>
+                    </a>
+                    <a href="{{url_for('admin_bp.category_page')}}">
+                        <li>Categories</li>
+                    </a>
+                </div>
+               <a href="#">
                     <li>
-                        Categories
+                        <svg id="svg-book" height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;}</style></defs><title>interface-content-book-2</title><rect class="a" x="0.553" y="0.5" width="3.5" height="13" rx="0.5"/><rect class="a" x="4.053" y="2.5" width="3.5" height="11" rx="0.5"/><rect class="a" x="9.263" y="2.3" width="3" height="11" rx="0.5" transform="translate(-1.571 2.846) rotate(-14.047)"/><line class="a" x1="0.553" y1="10" x2="4.053" y2="10"/><line class="a" x1="4.053" y1="9" x2="7.553" y2="9"/><line class="a" x1="10.053" y1="11" x2="12.93" y2="10.281"/></svg>
+                        Bookstore
                     </li>
                 </a>
-                <li>
-                    Bookstore
-                </li>
-                <li>
-                    Directory
-                </li>
+                <a href="#">
+                    <li>
+                        <svg id="directory-svg" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;}</style></defs><title>computer-storage-hard-disk</title><rect class="a" x="1.5" y="0.5" width="11" height="13" rx="1"/><line class="a" x1="4.5" y1="10.5" x2="6.5" y2="8"/><path class="a" d="M4.3,7.445A3,3,0,1,1,8.224,8.692"/><line class="a" x1="8.5" y1="11" x2="8.5" y2="11.5"/><line class="a" x1="10.5" y1="11" x2="10.5" y2="11.5"/></svg>
+                        Directory
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <svg id="comments-svg" height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="a" d="M5.588,11.476c-.3-.054-4.6,1.529-4.6,1.529,1.045-1,1.592-1.975,1.463-2.92A4.866,4.866,0,0,1,.5,6.3C.5,3.37,3.41,1,7,1s6.5,2.375,6.5,5.3S10.59,11.6,7,11.6A7.949,7.949,0,0,1,5.588,11.476Z"/><path class="a" d="M8.2,3.017A3.7,3.7,0,0,1,11.427,6.4a3.248,3.248,0,0,1-1.455,2.62"/></svg>
+                        Comments
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <svg id="user-svg" height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;}</style></defs><title>interface-id-user</title><path class="a" d="M13.5,10.5v2a1,1,0,0,1-1,1h-2"/><path class="a" d="M10.5.5h2a1,1,0,0,1,1,1v2"/><path class="a" d="M.5,3.5v-2a1,1,0,0,1,1-1h2"/><path class="a" d="M3.5,13.5h-2a1,1,0,0,1-1-1v-2"/><circle class="a" cx="7" cy="4.5" r="2"/><path class="a" d="M10.163,10.5a3.5,3.5,0,0,0-6.326,0"/></svg>
+                        Users
+                    </li>
+                </a>
             </ul>
+        </div>
+        <div class="logout-user">
+            <svg width="20" height="20" id="logout-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:whitestroke-linecap:round;stroke-linejoin:round;}</style></defs><title>interface-logout</title><path class="a" d="M9.5,10v2.5a1,1,0,0,1-1,1h-7a1,1,0,0,1-1-1V1.5a1,1,0,0,1,1-1h7a1,1,0,0,1,1,1V4"/><line class="a" x1="6.5" y1="7" x2="13.5" y2="7"/><polyline class="a" points="12 5.5 13.5 7 12 8.5"/></svg>
+            Logout
         </div>
     </div>
 </nav>
