--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -13,10 +13,10 @@
             <div class="carousel-inner">
                
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="{{url_for('static', filename='images/front/slide2-1024x530.jpg')}}" alt="First slide">
+                    <div class="d-block w-100 img-car-one"></div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="{{url_for('static', filename='images/front/slide3-scaled.jpg')}}" alt="Second slide">
+                    <div class="d-block w-100 img-car-two"></div>
                 </div>
             </div>
         </div>
@@ -26,7 +26,7 @@
 
         <div class="about-mahli">
             <div class="about-headings">
-                <h4>About Mahali</h4>
+                <h4 class="heading-sub">About Mahali</h4>
                 <h2>Who We Are</h2>
             </div>
             <div class="about-mahali-wrapper">
@@ -40,6 +40,53 @@
                 </div>
             </div>
         </div>
+
+        <!-- Services -->
+
+        <div class="services">
+            <div class="services-wrapper">
+                <h5 class="heading-sub">Services</h5>
+                <p class="services-p-text">Search our Business Directory for suppliers of great Products and Services, Or find news, events, courses & more in the UPLIFT Community Hub</p>
+
+            <!-- Services Grid / Product / Services / Uplift -->
+                    <div class="additional-wrapper">
+                        <div class="service-grid-wrapper">
+                            <div class="product-service-grid">
+                                <div class="product-service-title">
+                                    <h5>PRODUCTS</h5>
+                                    <p class="product-service-grid-text">
+                                        Find products for sale
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="service-service-grid">
+                                <div class="service-service-title">
+                                    <h5>SERVICES</h5>
+                                    <p class="product-service-grid-text">
+                                        Find products for sale
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="uplift-service-grid">
+                                <div class="uplift-service-title">
+                                    <h5>UPLIFT</h5>
+                                    <p class="product-service-grid-text">
+                                        News, Events, Courses, etc.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
+       <!-- Bookstore -->
+       <div class="homepage-bookstore">
+        <h4 class="heading-sub">Mahali Bookstore</h4>
+        <h2>Come and browse. There's a wide range of fantastic Authors for you to choose from</h2>
+       </div>
     </main>
     {% include 'include/scripts.html' %}
 </body>
