--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -444,6 +444,29 @@ td.actions-td {
 
 /* all posts end */
 
+/* bookstore -> add new book */
+
+.create-book-wrapper {
+    margin-left: 200px;
+    padding: 50px;
+}
+
+/* bookstore -> show all books */
+
+.bookstore-wrapper {
+    margin-left: 200px;
+    max-width: 500px;
+    margin: 50px auto 0 auto;
+}
+
+/* bookstore -> edit book */
+
+.edit-book-img {
+    position: relative;
+}
+
+
+
 /* Front End - Main Index */
 
 /* nav */
