--- a/app/templates/include/admin/side-navigation.html
+++ b/app/templates/include/admin/side-navigation.html
@@ -25,7 +25,7 @@
                         <li>Categories</li>
                     </a>
                 </div>
-               <a href="#">
+               <a href="{{url_for('admin_bp.bookstore')}}">
                     <li>
                         <svg id="svg-book" height="20" width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14"><defs><style>.a{fill:none;stroke:white;stroke-linecap:round;stroke-linejoin:round;}</style></defs><title>interface-content-book-2</title><rect class="a" x="0.553" y="0.5" width="3.5" height="13" rx="0.5"/><rect class="a" x="4.053" y="2.5" width="3.5" height="11" rx="0.5"/><rect class="a" x="9.263" y="2.3" width="3" height="11" rx="0.5" transform="translate(-1.571 2.846) rotate(-14.047)"/><line class="a" x1="0.553" y1="10" x2="4.053" y2="10"/><line class="a" x1="4.053" y1="9" x2="7.553" y2="9"/><line class="a" x1="10.053" y1="11" x2="12.93" y2="10.281"/></svg>
                         Bookstore
